--- a/package.json
+++ b/package.json
@@ -12,18 +12,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.2.4",
-    "@angular/common": "^4.2.4",
+    "@angular/animations": "^4.4.6",
+    "@angular/cdk": "^2.0.0-beta.8",
+    "@angular/common": "^4.4.6",
     "@angular/compiler": "^4.2.4",
-    "@angular/core": "^4.2.4",
+    "@angular/core": "^4.3.6",
+    "@angular/flex-layout": "^2.0.0-beta.10-4905443",
     "@angular/forms": "^4.2.4",
     "@angular/http": "^4.2.4",
+    "@angular/material": "^2.0.0-beta.8",
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
-    "rxjs": "^5.4.2",
-    "zone.js": "^0.8.14"
+    "hammerjs": "^2.0.8",
+    "rxjs": "^5.5.2",
+    "zone.js": "^0.8.18"
   },
   "devDependencies": {
     "@angular/cli": "1.3.2",
